--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 <script src="js/lib/cookies.js"></script>
 <script src="js/form.js"></script>
 <script src="js/game.js"></script>
+<script src="js/gallery.js"></script>
+<script src="js/gallery-init.js"></script>
 <script src="js/review.js"></script>
 <script src="js/reviews.js"></script>
 
