--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
 
-<!--
+<!-- Для работы по JSONP раскомментировать это
 <script>
   var reviews = [];
   function __reviewsLoadCallback(data) {
@@ -131,22 +131,24 @@
 <script src="https://up.htmlacademy.ru/assets/js_intensive/jsonp/reviews.js"></script>
 -->
 
-<script src="js/msg.js"></script>
+<!-- <script src="js/msg.js"></script> -->
+<!-- если подключен объект msg то используем его, иначе вывод в консоль
 <script>
-  /* если подключен объект msg то используем его, иначе вывод в консоль * /
   if (typeof(msg) != 'undefined') {
     console.log2 = console.log;
     console.log = function(par) {
       msg.show(par);
     }
-  } */
+  }
 </script>
-
+-->
 <script src="js/lib/cookies.js"></script>
 <script src="js/form.js"></script>
 <script src="js/game.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/gallery-init.js"></script>
+<script src="js/photo.js"></script>
+<script src="js/photos.js"></script>
 <script src="js/review.js"></script>
 <script src="js/reviews.js"></script>
 
