--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <script src="js/form.js"></script>
 <script src="js/game.js"></script>
 <script src="js/gallery.js"></script>
-<script src="js/gallery-init.js"></script>
+<!-- <script src="js/gallery-init.js"></script> -->
 <script src="js/photo.js"></script>
 <script src="js/photos.js"></script>
 <script src="js/review.js"></script>
