module8-task1 допы

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <script src="https://up.htmlacademy.ru/assets/js_intensive/jsonp/reviews.js"></script>
 -->
 
-<!-- <script src="js/msg.js"></script> -->
+<script src="js/msg.js"></script>
 <!-- если подключен объект msg то используем его, иначе вывод в консоль
 <script>
   if (typeof(msg) != 'undefined') {
@@ -142,11 +142,11 @@
   }
 </script>
 -->
+<script src="js/lib/polyfill.js"></script>
 <script src="js/lib/cookies.js"></script>
 <script src="js/form.js"></script>
 <script src="js/game.js"></script>
 <script src="js/gallery.js"></script>
-<!-- <script src="js/gallery-init.js"></script> -->
 <script src="js/photo.js"></script>
 <script src="js/photos.js"></script>
 <script src="js/review.js"></script>
