--- a/index.html
+++ b/index.html
@@ -132,26 +132,10 @@
 -->
 
 <script src="js/msg.js"></script>
-<!-- если подключен объект msg то используем его, иначе вывод в консоль
-<script>
-  if (typeof(msg) != 'undefined') {
-    console.log2 = console.log;
-    console.log = function(par) {
-      msg.show(par);
-    }
-  }
-</script>
--->
 <script src="js/lib/polyfill.js"></script>
 <script src="js/lib/cookies.js"></script>
-<script src="js/form.js"></script>
-<script src="js/game.js"></script>
-<script src="js/gallery.js"></script>
-<script src="js/photo.js"></script>
-<script src="js/photos.js"></script>
-<script src="js/review.js"></script>
-<script src="js/reviews.js"></script>
-
+<script src="js/lib/require.js" data-main="js/main"></script>
+<script src="out/main.js"></script>
 
 </body>
 </html>
